# sahand-trueai-start

./: .gitignore  AGENTS.md  GOLD_CHECKPOINT.yml  LICENSE  README.md  pyproject.toml
.github/: workflows
.github/workflows/: build_stais.yml
docs/: 00_intro.md  00_overview.md  TrueAI_lemmas_125_176.tex  architecture.md  awareness-paths.md  creation-timeline.md  entropy-lemma.md  formulas.md  fractal-map.md  gold-layer.md  info-symmetry.md  layer77.md  learning_rewrite_module.md  lemma79.md  platform-guide.md  reflective-consciousness.tex  wifi_access.md
docs/modules/: M1.yml  M10.yml  (+8 more)
examples/: .env.example  chat_cli.py  entropy_active.py  reflective_consciousness.py  run_persona.py  torch_train.py  train_torch_model.py  zeta_series.py
ios/: README.md
mkdir -p .github/: workflows
sat_solver/: SahandKnapsack.py  SahandSAT_Core.py  SahandSAT_Extended.py  SahandSAT_PySAT.py  __init__.py  sahandsat_stabilized.json
scripts/: wifi_helper.py
src/: wifi_access.py
sstai/: .env  main.py  persona_system.txt  requirements.txt
stait/: structure.md
tests/: test_chat_cli.py  test_conscious_field.py  test_dissolution.py  test_encoder.py  test_entropy.py  test_fractal.py  test_fractal_net.py  test_knapsack.py  test_legacy_sat_modules.py  test_lemma_fractal.py  test_lemmas.py  test_persona.py  test_rewrite_module.py  test_run_persona.py  test_sahand_knapsack.py  test_sahand_knapsack_integration.py  test_sahand_sat.py  test_sahand_sat_core.py  test_sat_solver_pysat.py  test_security.py  test_torch_model.py  test_wifi.py  test_wifi_helper.py  test_zeta_series.py
(+47 files in other folders)
