[tool.poetry]
name = "sstai"
version = "0.1.0"
description = "Sahand Shahhosseini True AI – prototype implementation"
authors = ["Sahand Shahhosseini <creator@example.com>"]
readme = "README.md"
packages = [{ include = "sstai", from = "src" }]
include = ["src/sstai/data/lemmas.json"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26"
torch = "^2.2"
fastapi = "^0.111"
uvicorn = {extras = ["standard"], version = "^0.29"}
pydantic = "^2.7"
sqlmodel = "^0.0.16"
openai = ">=1.21.1"
python-dotenv = ">=1.0.1"
rich = ">=13.7.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
